--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
     text-align: center;
     background-color: rgb(165, 201, 202);
@@ -33,7 +34,10 @@ li {
     border-radius: 7px;
     margin: 10px;
 }
-
+.todo {
+  margin-left: 10px;
+  flex: auto;
+}
 .textInput {
     width: auto;
     border: none;
